--- a/lib/live_view_studio_web/live/filter_live.html.leex
+++ b/lib/live_view_studio_web/live/filter_live.html.leex
@@ -11,6 +11,7 @@
           <%= price_checkbox(price: price, selected: price in @prices) %>
         <% end %>
       </div>
+      <a href="#" phx-click="clear-filters">Clear All</a>
     </div>
   </form>
   <div class="boats">
